--- a/src/styles.css
+++ b/src/styles.css
@@ -353,6 +353,7 @@ footer a {
     flex: row;
     width: 100%;
     margin-bottom: 20px;
+    
 }
 
 .math form fieldset .butcont button {
@@ -465,6 +466,34 @@ footer a {
     width: 100%;
 }
 
+.collisions {
+    margin-top: 2%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.collisions div {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.test {
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: 15%;
+}
+
+.test .butcont button:hover {
+    cursor: pointer;
+}
 
 
 @media (max-width: 700px) {
@@ -691,6 +720,9 @@ footer a {
         font-size: 1.05rem;
     }
 
+    .collisions {
+        flex-direction: column;
+    }
 }
 
 @media (min-width: 700px) and (max-width: 900px) {
